--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,7 +11,8 @@
     "rootDir": "electron",
     "declaration": false,
     "sourceMap": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "composite": true
   },
   "include": ["electron/**/*.ts"]
 }
