--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -9,7 +9,7 @@
     "skipLibCheck": true,
     "outDir": "dist-electron",
     "rootDir": "electron",
-    "declaration": false,
+    "declaration": true,
     "sourceMap": true,
     "resolveJsonModule": true,
     "composite": true
