--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "rebuild": "electron-rebuild"
   },
   "dependencies": {
+    "@types/react-window": "^1.8.8",
     "better-sqlite3": "^11.7.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-window": "^2.2.3",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
