Update project dependencies and documentation to support Bun as the primary package manager. Modify installation and development commands in README and CONTRIBUTING.md, and update copyright notice in LICENSE file.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -p tsconfig.node.json && vite build",
-    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && npm run electron:start\"",
+    "electron:dev": "concurrently \"bun run dev\" \"wait-on http://localhost:5173 && bun run electron:start\"",
     "electron:start": "cross-env NODE_ENV=development electron .",
-    "electron:build": "npm run build && electron-builder",
+    "electron:build": "bun run build && electron-builder",
     "preview": "vite preview",
     "postinstall": "electron-rebuild",
     "rebuild": "electron-rebuild"
